[package]
name = "get-images"
version = "0.1.0"
authors = ["chronicl <lennard.koehler@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.8"
tokio = { version = "0.2.22", features = ["full"] }
error-chain = "0.12.4"